--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -3106,6 +3106,8 @@ label.option {
 }
 
 .view-event-gallery .view-header {
+        float: left;
+        width: 978px;
 	border: 1px solid #BFBFBF;
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
@@ -3117,7 +3119,7 @@ label.option {
 }
 
 .view-event-gallery .pager {
-        width: 980px;
+        width: 978px;
 	border: 1px solid #BFBFBF;
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
@@ -3133,7 +3135,7 @@ label.option {
 }
 
 .view-myphotos .pager {
-        width: 980px;
+        width: 978px;
 	border: 1px solid #BFBFBF;
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
