--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -1607,10 +1607,12 @@ ul#edit-file_filelist {
 	color: #fff;
 	background-color: green;
 	font-size: 12px;
-	width: 40px;
+	min-width: 40px;
 	height: 40px;
 	line-height: 40px;
 	text-align: center;
+	padding-left:4px;
+	padding-right:4px;
 }
 
 .page-cart #cart-result {
