--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -3069,6 +3069,17 @@ label.option {
   border: 1px solid #585858;
   margin: 0;
 }
+.node-type-event .view-event-carousel .gallery-link {
+    margin-top: -6px;
+    margin-bottom: 20px;
+    width: 330px;
+    float: right;
+    text-align: center;
+    padding: 3px;
+    border: 1px solid #585858;
+    border-bottom-left-radius: 10px;
+/*    border-bottom-right-radius: 5px;*/
+}
 
 .node-type-event .gray-bdr {
   margin-bottom: 5px;
