--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -3125,12 +3125,11 @@ label.option {
 .view-event-gallery .view-header {
         float: left;
         width: 978px;
-	border: 1px solid #BFBFBF;
-	border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;
         margin-top: -20px;
-        padding-top: 10px;
-        text-align: center;        
+        padding-top: 5px;
+        padding-bottom: 20px;
+        text-align: center;
+        display: block;
 	
 }
 
@@ -3166,19 +3165,39 @@ label.option {
         margin-bottom: 0;
 }
 
-.view-event-gallery #link-to-unmatched {
-    float: right;
+.view-event-gallery #links-block {
+  float: right;
+}
+
+.view-event-gallery #link-selected {
     width: 190px;
     padding: 3px;
     background-color: #585858;
     margin-right: -1px;
     margin-bottom: -1px;
+    border: 1px solid #585858;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;    
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
 
-.view-event-gallery #link-to-unmatched a {
+.view-event-gallery #link-selected a {
     color: #DDD;
+}
+
+.view-event-gallery #link-other {
+    width: 190px;
+    padding: 3px;
+    margin-right: -1px;
+    margin-bottom: -1px;
+    border: 1px solid #585858;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;    
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.view-event-gallery #photos-from {
+  padding-top: 25px;
 }
