--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -1426,7 +1426,7 @@ a#guide:hover {
 .recent-events  .event-title a {
 	color: rgb(68, 68, 68);
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 18pt;
+	font-size: 14pt;
 	text-align: center;
 }
 
@@ -1478,21 +1478,19 @@ a#guide:hover {
 }
 
 .recent-events .form-submit {
+  background-color: #06F;
+  font-size: 12pt;
 	margin-top: 0px;
 	cursor: pointer;
-	background: url("../images/find-btn.png") no-repeat scroll 0 0
-		transparent;
 	border: 0 none;
 	cursor: pointer;
 	height: 32px;
-	width: 88px;
+	width: 100px;
 	float: left;
 }
 
 .recent-events .form-submit:hover {
-	background: url("../images/find-btn.png") no-repeat scroll 0 0
-		transparent;
-	background-color: #777;
+	background-color: #39F;
 }
 
 .block .content {
@@ -1565,20 +1563,6 @@ a#guide:hover {
 div.form-item-url-hidden
 {
 	display: none;
-}
-/*
-#overlay-content #block-feedback-form .feedback-message {
-	height: 100%;
-}
-*/
-#overlay .content {
-	box-shadow: none;
-}
-
-ul#edit-file_filelist {
-	*visibility: hidden !important;
-	/* IE 7 (IE6 also uses this, so put it first) */
-	_visibility: hidden !important; /* IE 6 */
 }
 
 .cart-block-icon-empty {
@@ -1694,8 +1678,6 @@ table.cart-block-summary tbody tr td {
 .page-cart #uc-cart-view-form table {
 	padding: 0 0 10px 0;
 	margin: 0px;
-	overflow-x: hidden;
-	overflow-y: scroll;
 }
 
 .page-cart #cart_result_title {
@@ -2523,7 +2505,7 @@ table.cart-block-summary tbody tr td {
 /* -------------- THE button -------------- */
 .form-submit { /* text */
 	text-decoration: none;
-	font-size: 20px;
+	font-size: 14pt;
 	font-weight: bold;
 	-webkit-user-select: none;
 	-moz-user-select: none;
@@ -3181,4 +3163,8 @@ label.option {
 
 .view-event-gallery #photos-from {
   padding-top: 45px;
+}
+
+.front .form-item-event {
+  width: 400px;
 }
