--- a/sites/all/modules/custom/photo_upload/photo_upload.css
+++ b/sites/all/modules/custom/photo_upload/photo_upload.css
@@ -6,6 +6,7 @@
   background-color: #384551;
 }
 
+.page-photographer .price-slider #amount,
 .page-photographer #select-event-function label {
   color: #FFF;
 }
