Added jquery-placeholder script.

--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -1340,7 +1340,7 @@ a#guide:hover {
 
 /* ************ Footer Region ********** */
 .region-footer {
-	float: right;
+	float: left;
 	width: 100%;
 	margin-top: 20px;
 	clear: both;
