--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -188,6 +188,21 @@ it
 	width: 500px;
 	float: left;
 }
+.page-user-edit .form-submit { 
+  float:none
+}
+#user-profile-form .form-text {
+  padding-left: 150px;
+}
+
+
+
+.page-user.page-user-edit form {
+  float:none;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+}
 
 .facebook-logo {
 	background: url('../images/facebook-login.png') no-repeat;
@@ -386,7 +401,10 @@ it
 	margin-top: -20px;
 }
 
-
+#user-login .form-text {
+  width: 290px;
+  padding-left: 110px;
+}
 .cont-header-bg h1 {
 	color: #63676b;
 	font-family: walkway-bold, sans-serif;
@@ -534,15 +552,16 @@ it
 }
 
 .page-user #user-login {
-	margin-top: 20px;
   margin-left: 290px;
   width: 400px;
+  height: 220px;
 }
 
 .page-user h1 {
 	color: #94BB17;
 	font-family: walkway-bold, sans-serif;
 	font-size: 26px;
+  letter-spacing: 2px;
 	font-weight: normal;
 }
 
@@ -615,18 +634,6 @@ it
   border-radius: 0;
 }
 
-#user-register-form label, 
-#user-login label {
-  display:none;
-	color: #1A253C;
-	float: left;
-	font-family: arial;
-	font-size: 12px;
-	font-weight: 300;
-	margin-top: 14px;
-	height: 30px
-}
-
 .page-user .form-item {
   height:45px;
 	clear: both;
@@ -637,12 +644,6 @@ it
   height:50px;
 }
 
-#user-register-form .form-text {
-  margin-right: 30px;
-	float: right;
-	width: 350px;
-	clear: right;
-}
 
 #modal-content label {
 	display: block;
@@ -653,7 +654,8 @@ it
 }
 
 .page-user .form-text {
-	width: 380px;
+	width: 220px;
+  padding-left: 150px;
 	clear: right;
 }
 
@@ -1140,6 +1142,7 @@ ul.nice-menu, ul.nice-menu ul
 }
 
 .page-user form {
+  width: 400px;
 	padding: 20px;
 	border: 1px solid #BFBFBF;
 	border-radius: 5px;
@@ -1149,10 +1152,7 @@ ul.nice-menu, ul.nice-menu ul
 	float: left;
 	width: 100%;
 }
-.page-user form {
-  float: left;
-  width: 500px;
-}
+
 .page-user #edit-locale {
   display: none;
 }
@@ -1287,14 +1287,16 @@ a#guide:hover {
 }
 
 /* Profile page */
-#user-profile-form label {
-	color: #1A253C;
+.page-user form label {
+  position: absolute;
+  margin-left: 20px;
 	float: left;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 13px;
-	font-weight: 300;
+  color: #AAA;
+	font-size: 14px;
+	font-weight: 800;
 	margin-top: 14px;
-	width: 136px;
+	width: 130px;
 }
 
 #user-profile-form fieldset.collapsible {
@@ -1302,19 +1304,20 @@ a#guide:hover {
 }
 
 #user-profile-form .description {
-	color: #898989;
-	margin-bottom: 0.75em;
+  float: right;
+  margin-bottom: 0.75em;
 	margin-top: 5px;
 	position: relative;
+  width: 350px;
+  color: #000;
 }
 
 #user-profile-form .form-type-checkbox input {
+  float: left;
 	margin-top: 17px;
 }
 
 #user-profile-form .form-type-checkbox .description {
-	width: 300px;
-	float: right;
 	display: block;
 	margin-left: 0px;
 }
