Style fix for login on home page.

--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -401,10 +401,12 @@ it
 	margin-top: -20px;
 }
 
-#user-login .form-text {
+.page-user #user-login .form-text {
   width: 290px;
   padding-left: 110px;
 }
+
+
 .cont-header-bg h1 {
 	color: #63676b;
 	font-family: walkway-bold, sans-serif;
@@ -552,6 +554,8 @@ it
 }
 
 .page-user #user-login {
+  margin-top: 40px;
+  margin-bottom: 40px;
   margin-left: 290px;
   width: 400px;
   height: 220px;
@@ -570,6 +574,7 @@ it
 	font-family: walkway-bold, sans-serif;
 	font-size: 20px;
 	font-weight: normal;
+  letter-spacing: 2px;
 }
 
 
